--- a/section-07-ci-and-publishing/house-prices-api/requirements.txt
+++ b/section-07-ci-and-publishing/house-prices-api/requirements.txt
@@ -4,5 +4,6 @@ python-multipart>=0.0.5,<0.1.0
 pydantic>=1.10.4,<1.12.0
 typing_extensions>=4.2.0,<5.0.0
 loguru>=0.5.3,<1.0.0
+feature-engine==1.2.0 # downgrade on RareLabelEncoder error
 # We will explain this in the course
 tid-regression-model>=3.2.0
