--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
       - run:
           name: Deploy to Railway App (You must set RAILWAY_TOKEN env var)
           command: |
-            cd section-07-ci-and-publishing/house-prices-api && railway up --detach
+            cd section-07-ci-and-publishing/house-prices-api && railway up --detach -s grumpy-key -e production
 
   section_07_test_and_upload_regression_model:
     <<: *defaults
@@ -92,7 +92,7 @@ jobs:
       - run:
           name: Build and run Dockerfile (see https://docs.railway.app/deploy/dockerfiles)
           command: |
-            cd section-08-deploying-with-containers && railway up --detach
+            cd section-08-deploying-with-containers && railway up --detach -s grumpy-key -e production
 
   test_regression_model_py37:
     docker:
@@ -274,7 +274,7 @@ workflows:
           filters:
             branches:
               only:
-                - master
+                - main
                 - demo
       # upload after git tags are created
       - section_07_test_and_upload_regression_model:
@@ -284,7 +284,7 @@ workflows:
          filters:
            branches:
              only:
-               - master
+               - main
                - demo
 
 #  test-all:
